# angular-bazel-example

./: .bazelrc  README.md  WORKSPACE  package.json
src/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.ts  app.module.dev.ts  app.module.ts  index.html  tsconfig.json
src/angular-js/: BUILD.bazel  app.module.ts  app.routes.ts  component.ts  module.ts  panel-dialog.template.ts  panel.controller.ts  panel.module.ts  panel.template.ts  routes.ts
